--- a/hr_payroll_custom/views/hr_payslip_view.xml
+++ b/hr_payroll_custom/views/hr_payslip_view.xml
@@ -22,7 +22,6 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='appears_on_payslip']" position="after">
                     <field name="company_id"/>
-                    <field name="currency_id"/>
                 </xpath>
             </field>
         </record>
@@ -35,14 +34,12 @@
                 <xpath expr="//button[@name='action_print_payslip']" position="after">
                     <button string="Print Excel" name="print_excel" type="object"/>
                 </xpath>
-                <xpath expr="//field[@name='line_ids']/list/field[@name='amount']"  position="replace">
+                <xpath expr="//field[@name='employee_id']" position="after">
+                    <field name="employee_grade"/>
+                    <field name="usd_rate" invisible="employee_grade not in ('m2','p1')" required="employee_grade not in ('m2','p1')"/>
 
-                 <field name="amount"
-                    sum="Total Amount" 
-               widget="monetary"
-               options="{'currency_field': 'currency_id'}"/>
-        <field name="currency_id"/>
                 </xpath>
+
             </field>
         </record>
 
