--- a/hr_payroll_custom/views/hr_payslip_view.xml
+++ b/hr_payroll_custom/views/hr_payslip_view.xml
@@ -52,11 +52,10 @@
                 <xpath expr="//button[@name='action_draft']" position="after">
                     <button string="Print Excel" name="print_excel" type="object"/>
                 </xpath>
-          <!--       <xpath expr="//field[@name='employee_id']" position="after">
-                    <field name="employee_grade"/>
-                    <field name="usd_rate" invisible="employee_grade not in ('m2','p1')" required="employee_grade not in ('m2','p1')"/>
+                <xpath expr="//field[@name='date_end']" position="after">
+                    <field name="usd_rate" required="1"/>
 
-                </xpath> -->
+                </xpath>
             </field>
         </record>
     </data>
