--- a/hr_payroll_custom/views/hr_payslip_view.xml
+++ b/hr_payroll_custom/views/hr_payslip_view.xml
@@ -34,7 +34,7 @@
                 <xpath expr="//button[@name='action_print_payslip']" position="after">
                     <button string="Print Excel" name="print_excel" type="object"/>
                 </xpath>
-                <xpath expr="//field[@name='employee_id']" position="after">
+                <xpath expr="//field[@name='contract_id']" position="after">
                     <field name="employee_grade"/>
                     <field name="usd_rate" invisible="employee_grade not in ('m2','p1')" required="employee_grade not in ('m2','p1')"/>
 
