--- a/medigates_accounting/views/account.xml
+++ b/medigates_accounting/views/account.xml
@@ -57,7 +57,7 @@
 <record id="action_trusted_overdue_invoices" model="ir.actions.act_window">
     <field name="name">Trusted Overdue Invoices</field>
     <field name="res_model">account.move</field>
-    <field name="view_mode">list,form</field>
+    <field name="view_mode">list</field>
     <field name="domain">
         [('partner_id.trust_custom','=',True),
          ('state','=','posted'),
