--- a/medigates_accounting/views/account.xml
+++ b/medigates_accounting/views/account.xml
@@ -57,15 +57,14 @@
 <record id="action_trusted_overdue_invoices" model="ir.actions.act_window">
     <field name="name">Trusted Overdue Invoices</field>
     <field name="res_model">account.move</field>
-    <field name="view_mode">list</field>
+    <field name="view_mode">list,form</field>
     <field name="domain">
         [('partner_id.trust_custom','=',True),
          ('state','=','posted'),
          ('payment_state','!=','paid'),
-         ('invoice_date_due','&lt;=',context_today()),
-         ('invoice_user_id','=',uid)]
+         ('invoice_date_due','&lt;=',context_today())]
     </field>
-    <field name="context">{}</field>
+    <field name="context">{'create': False, 'edit': Ture}</field>
 </record>
 <!-- XML: Add Menu Item Under Invoicing -->
 <menuitem
