--- a/hr_payroll_custom/views/hr_payslip_view.xml
+++ b/hr_payroll_custom/views/hr_payslip_view.xml
@@ -22,6 +22,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='appears_on_payslip']" position="after">
                     <field name="company_id"/>
+                    <field name="currency_id"/>
                 </xpath>
             </field>
         </record>
@@ -34,12 +35,14 @@
                 <xpath expr="//button[@name='action_print_payslip']" position="after">
                     <button string="Print Excel" name="print_excel" type="object"/>
                 </xpath>
-                <xpath expr="//field[@name='contract_id']" position="after">
-                    <field name="employee_grade"/>
-                    <field name="usd_rate" invisible="employee_grade not in ('m2','p1')" required="employee_grade not in ('m2','p1')"/>
+                <xpath expr="//field[@name='line_ids']/list/field[@name='amount']"  position="replace">
 
+                 <field name="amount"
+                    sum="Total Amount" 
+               widget="monetary"
+               options="{'currency_field': 'currency_id'}"/>
+        <field name="currency_id"/>
                 </xpath>
-
             </field>
         </record>
 
@@ -51,10 +54,6 @@
             <field name="arch" type="xml">
                 <xpath expr="//button[@name='action_draft']" position="after">
                     <button string="Print Excel" name="print_excel" type="object"/>
-                </xpath>
-                <xpath expr="//field[@name='date_end']" position="after">
-                    <field name="usd_rate" required="1"/>
-
                 </xpath>
             </field>
         </record>
