--- a/hr_payroll_custom/views/hr_payslip_view.xml
+++ b/hr_payroll_custom/views/hr_payslip_view.xml
@@ -35,6 +35,10 @@
                 <xpath expr="//button[@name='action_print_payslip']" position="after">
                     <button string="Print Excel" name="print_excel" type="object"/>
                 </xpath>
+                 <xpath expr="//field[@name='contract_id']" position="after">
+                     <field name="employee_grade"/>
+                    <field name="usd_rate"/>
+                </xpath>
                 <xpath expr="//field[@name='line_ids']/list/field[@name='amount']"  position="replace">
 
                  <field name="amount"
@@ -55,6 +59,10 @@
                 <xpath expr="//button[@name='action_draft']" position="after">
                     <button string="Print Excel" name="print_excel" type="object"/>
                 </xpath>
+                <xpath expr="//field[@name='company_id']" position="after">
+                    <field name="usd_rate"/>
+                </xpath>
+                
             </field>
         </record>
     </data>
