sale report and seq approval

--- a/medigates_sale/reports/report_sale_template.xml
+++ b/medigates_sale/reports/report_sale_template.xml
@@ -87,8 +87,9 @@
                 <th>Order Date</th>
                 <th>Order</th>
                 <th>Product</th>
+                <th>Salesperson</th>
                 <th>Customer</th>
-                <th>City</th>
+                <th>Customer City</th>
                 <th>Salesperson</th>
                 <th>Company</th>
                 <th>Quantity</th>
