--- a/medigates_sale/reports/sale_report.xml
+++ b/medigates_sale/reports/sale_report.xml
@@ -1,6 +1,68 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <data>
+      <record id="sale_salespersons_report_view_tree" model="ir.ui.view">
+        <field name="name">sale.report.view.list</field>
+        <field name="model">sale.report</field>
+        <field name="arch" type="xml">
+            <list string="Sales Analysis By Salespersons" action="action_open_order" type="object">
+                <field name="date"/>
+                <field name="order_reference" optional="show"/>
+                <field name="product_id" string="Product" optional="show"/>
+                <field name="partner_id"/>
+                <field name="city"/>
+                <field name="user_id" optional="show" widget="many2one_avatar_user"/>
+                <field name="team_id" optional="show"/>
+                <field name="company_id" optional="show" groups="base.group_multi_company"/>
+                <field name="product_uom_qty" string="Quantity" sum="Sum of Quantity"/>
+                <field name="price_subtotal" optional="hide" sum="Sum of Untaxed Total"/>
+                <field name="price_unit" widget="monetary" avg="Average"/>
+                <field name="price_total" optional="show" sum="Sum of Total"/>
+                <field name="state" optional="hide"/>
+                <field name="pricelist_id" optional="hide"/>
+                <field name="line_invoice_status" optional="hide"/>
+                <field name="currency_id" column_invisible="True"/>
+            </list>
+        </field>
+    </record>
+
+     <record id="view_order_product_search_inherit" model="ir.ui.view">
+         <field name="name">sale.report.graph.pie</field>
+         <field name="model">sale.report</field>
+         <field name="mode">primary</field>
+         <field name="inherit_id" ref="sale.view_order_product_search"/>
+         <field name="arch" type="xml">
+          <xpath expr="//filter[@name='Customer']" position="after">
+           <filter string="Customer city" name="city" context="{'group_by':'city'}"/>
+         </xpath>
+         </field>
+    </record>
+
+
+
+
+  <!--    <record id="view_order_product_pivot" model="ir.ui.view">
+         <field name="name">sale.report.pivot</field>
+         <field name="model">sale.report</field>
+         <field name="arch" type="xml">
+             <pivot string="Sales Analysis" sample="1">
+                 <field name="team_id" type="col"/>
+                 <field name="date" interval="month" type="row"/>
+                 <field name="product_uom_qty" type="measure"/>
+             </pivot>
+         </field>
+    </record> -->
+
+    <record id="sale.action_order_report_salesperson" model="ir.actions.act_window">
+        <field name="name">Sales Analysis By Salespersons</field>
+        <field name="res_model">sale.report</field>
+        <field name="view_mode">graph,pivot,list</field>
+        <field name="view_id" ref="sale_salespersons_report_view_tree"/>
+        <field name="search_view_id" ref="sale.view_order_product_search"/>
+        <field name="context">{'search_default_User': 1, 'group_by': 'user_id', 'search_default_filter_order_date': 1}</field>
+        <field name="help">This report performs analysis on your quotations and sales orders. Analysis check your sales revenues and sort it by different group criteria (salesman, partner, product, etc.) Use this report to perform analysis on sales not having invoiced yet. If you want to analyse your turnover, you should use the Invoice Analysis report in the Accounting application.</field>
+    </record>
+
 
 <record id="view_sale_invoice_report_list20" model="ir.ui.view">
     <field name="name">sale.invoice.report.list</field>
@@ -57,49 +119,49 @@
           sequence="1"/>
 
 <!-- Report Action -->
-<record id="action_report_salesperson" model="ir.actions.report">
+<!-- <record id="action_report_salesperson" model="ir.actions.report">
     <field name="name">Salesperson Report</field>
     <field name="model">sale.order.line</field>
     <field name="report_type">qweb-pdf</field>
     <field name="report_name">medigates_sale.report_salesperson_pdf</field>
     <field name="binding_model_id" ref="sale.model_sale_order_line"/>
     <field name="binding_type">report</field>
-</record>
+</record> -->
 
 <!-- Menu Item to open the list view -->
-<menuitem id="menu_salesperson_report" name="Salesperson Report" parent="sale.menu_sale_report"/>
+<!-- <menuitem id="menu_salesperson_report" name="Salesperson Report" parent="sale.menu_sale_report"/> -->
 
 <!-- Action to open list view -->
-<record id="action_salesperson_report" model="ir.actions.act_window">
+<!-- <record id="action_salesperson_report" model="ir.actions.act_window">
     <field name="name">Salesperson Report</field>
     <field name="res_model">sale.order.line</field>
     <field name="view_mode">list,form</field>
     <field name="domain">[]</field>
 </record>
-
+ -->
 <!-- Link Menu to Action -->
-<menuitem id="menu_salesperson_report_action" name="View Report" parent="sale.menu_sale_report" action="action_salesperson_report"/>
+<!-- <menuitem id="menu_salesperson_report_action" name="View Report" parent="sale.menu_sale_report" action="action_salesperson_report"/> -->
 
 <!-- list View (List) -->
-<record id="view_salesperson_report_tree" model="ir.ui.view">
+<!--  <record id="view_salesperson_report_tree" model="ir.ui.view">
     <field name="name">sale.order.line.salesperson.report.tree</field>
     <field name="model">sale.order.line</field>
     <field name="arch" type="xml">
         <list string="Salesperson Report">
             <field name="order_id"/>
             <field name="product_id"/>
-         <!--    <field name="parent.partner_id" string="Customer"/>
+    <field name="parent.partner_id" string="Customer"/>
             <field name="parent.partner_id.city" string="City"/>
             <field name="parent.user_id" string="Salesperson"/>
-            <field name="parent.company_id" string="Company"/> -->
-            <field name="product_uom_qty" string="Quantity"/>
+            <field name="parent.company_id" string="Company"/> 
+             <field name="product_uom_qty" string="Quantity"/>
             <field name="price_unit" string="Unit Price"/>
-            <field name="price_total" string="Total"/>
-            <!-- <field name="parent.date_order" string="Order Date"/> -->
-        </list>
+            <field name="price_total" string="Total"/> 
+             <field name="parent.date_order" string="Order Date"/> 
+         </list>
     </field>
-</record>
-
+</record>  -->
+ 
   <!-- <report
     id="action_report_inventory_movement_pdf"
     model="product.product"
