--- a/medigates_sale/views/sale_order.xml
+++ b/medigates_sale/views/sale_order.xml
@@ -13,11 +13,47 @@
             </field>
         </record>
 
-    <record id="view_order_form_custom_delivery_fields" model="ir.ui.view">
+    <record id="view_order_form_custom_delivery_fields2" model="ir.ui.view">
         <field name="name">sale.order.form.delivery.fields</field>
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
+            <xpath expr="//button[@name='action_confirm']" position="before">
+                <button name="action_sales_supervisor" data-hotkey="q"
+                    string="Sales Supervisor Approval" type="object" context="{'validate_analytic': True}"
+                    invisible="state != 'draft'"/>
+            </xpath>
+
+            <xpath expr="//button[@name='action_confirm'][2]" position="replace">
+                   <button name="action_confirm" data-hotkey="q"
+                    string="Confirm" type="object" context="{'validate_analytic': True}"
+                    invisible="state != 'sales_supervisor'"/>
+            </xpath>
+      <!--       <xpath expr="//button[@name='action_confirm']" position="replace">
+                   <button name="action_confirm" data-hotkey="q"
+                    string="Confirm" type="object" context="{'validate_analytic': True}"
+                    invisible="state != 'sales_supervisor'"/>
+            </xpath> -->
+            <xpath expr="//button[@name='action_confirm']" position="after">
+                <button name="action_accountant" data-hotkey="q"
+                    string="Sales Supervisor Approval" type="object" context="{'validate_analytic': True}"
+                    invisible="state != 'sale'"/>
+            </xpath>
+            
+            <xpath expr="//button[@id='create_invoice']" position="replace">
+                <button id="create_invoice" name="%(sale.action_view_sale_advance_payment_inv)d" string="Create Invoice"
+                    type="action" class="btn-primary" data-hotkey="q"
+                    invisible="invoice_status != 'to invoice' and state != 'accountant'"/>
+            </xpath>
+             <xpath expr="//button[@id='create_invoice_percentage']" position="replace">
+                    <button id="create_invoice_percentage" name="%(sale.action_view_sale_advance_payment_inv)d" string="Create Invoice"
+                    type="action" context="{'default_advance_payment_method': 'percentage'}" data-hotkey="q"
+                    invisible="invoice_status != 'no' or state != 'accountant'"/>
+            </xpath>
+            <xpath expr="//field[@name='state']" position="replace">
+                <field name="state" widget="statusbar" statusbar_visible="draft,sales_supervisor,sent,sale,accountant"/>
+
+            </xpath>
             <xpath expr="//field[@name='commitment_date']" position="after">
                 <field name="customer_outside_local_city"/>
                 <field name="confirmed_delivery_date"/>
