--- a/order_return/reports/reports.xml
+++ b/order_return/reports/reports.xml
@@ -22,5 +22,49 @@
                 <field name="binding_type">report</field>
         </record>
 
+        <record id="view_order_return_report_list" model="ir.ui.view">
+            <field name="name">view.order.return.list</field>
+            <field name="model">order.return.report</field>
+            <field name="arch" type="xml">
+                <list string="Sales Return Analysis" action="action_open_order" type="object">
+                <field name="company_id" optional="show" groups="base.group_multi_company" string="Company Name (Tabuk or Hikma)"/>
+                <field name="return_name" string="Return Number" optional="show"/>
+                <field name="sale_id_reference"/>
+                <field name="return_date" string="Return Date"/>
+                
+                <field name="invoice_number" string="Invoice Number" optional="hide"/>
+                <field name="invoice_date" string="Invoice date"/>
+                <field name="product_id" string="Product" optional="show"/>
+                <field name="partner_id"/>
+                <field name="city"/>
+                <field name="user_id" optional="show" widget="many2one_avatar_user"/>
+                <field name="location_id"/>
+                <field name="product_uom_qty" string="Qty returned" sum="Sum of Quantity"/>
+                <field name="product_bonus_uom_qty" string="Bonus Qty returned" sum="Bonus returned Qty"/>
+                <field name="price_unit" widget="monetary" avg="Average"/>
+                <!-- <field name="amount_total" optional="show" sum="Sum of Total"/> -->
+                <field name="state" optional="hide"/>
+                <field name="line_invoice_status" string="Invoice Status" optional="hide"/>
+            </list>
+            </field>
+        </record>
+
+
+    <record id="action_order_return_report_all" model="ir.actions.act_window">
+        <field name="name">Sales Return Analysis</field>
+        <field name="res_model">order.return.report</field>
+        <field name="view_mode">graph,pivot,list</field>
+        <field name="view_id"></field>  <!-- force empty -->
+        <field name="search_view_id" ref="view_order_return_report_list"/>
+        <field name="domain">[('state', '!=', 'cancel')]</field>
+        <field name="context">{'search_default_Sales':1,'group_by':[]}</field>
+       
+    </record>
+
+        <menuitem id="menu_reporting_order_return"
+                name="Sales Return Analysis"
+                action="action_order_return_report_all"
+                 parent="sale.menu_sale_report"
+                sequence="25"/>
     </data>
 </odoo>
