--- a/order_return/reports/sale_order_report_unpaid.xml
+++ b/order_return/reports/sale_order_report_unpaid.xml
@@ -35,9 +35,9 @@
     <record id="action_order_report_account_unpaid_all" model="ir.actions.act_window">
         <field name="name">Unpaid Sales Analysis Report</field>
         <field name="res_model">sale.report.account.unpaid</field>
-        <field name="view_mode">graph,pivot,list</field>
+        <field name="view_mode">list,graph,pivot</field>
         <field name="view_id"></field>  <!-- force empty -->
-        <field name="search_view_id" ref="view_order_account_report_unpaid_list"/>
+        <field name="search_view_id" ref="order_return.view_order_product_paid_search"/>
         <field name="domain">[('state', '!=', 'cancel')]</field>
         <field name="context">{'search_default_Sales':1,'group_by':[]}</field>
        
