--- a/order_return/reports/report_stock_move_incoming.xml
+++ b/order_return/reports/report_stock_move_incoming.xml
@@ -49,7 +49,7 @@
     </record>
 
     <!-- ==================== SEARCH VIEW ==================== -->
-<!--     <record id="view_stock_move_incoming_search" model="ir.ui.view">
+   <!--  <record id="view_stock_move_incoming_search" model="ir.ui.view">
         <field name="name">stock.move.incoming.search</field>
         <field name="model">stock.move</field>
         <field name="arch" type="xml">
@@ -58,7 +58,7 @@
                 <field name="product_id"/>
                 <field name="currency_id"/>
                 <field name="location_dest_id"/>
-                <!-- <filter string="Incoming" name="incoming_filter" domain="[('picking_type_code','=','incoming')]"/> -->
+                <filter string="Incoming" name="incoming_filter" domain="[('picking_type_code','=','incoming')]"/>
                 <filter string="Done" name="done_filter" domain="[('state','=','done')]"/>
             </search>
         </field>
@@ -71,7 +71,7 @@
         <field name="view_id" ref="view_stock_move_incoming_list"/>
         <field name="search_view_id" ref="stock.view_move_search"/>
         <!-- <field name="domain">[('picking_type_code','=','incoming')]</field> -->
-        <field name="context">{}</field>
+         <field name="context">{'search_default_done': 1}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 No incoming stock moves found.
