--- a/hr_contract_custom/views/contracts_views.xml
+++ b/hr_contract_custom/views/contracts_views.xml
@@ -7,16 +7,16 @@
             <field name="inherit_id" ref="hr_contract.hr_contract_view_form"/>
             <field name="arch" type="xml">
                   <xpath expr="//field[@name='wage']"  position="attributes">
-                    <attribute name="invisible">employee_grade in ('m2','p1')</attribute>
+                    <attribute name="invisible">employee_grade in ('m3','m2','m1','p3','p2','p1')</attribute>
                   </xpath>
                 <xpath expr="//group[@name='salary']" position="before">
                     <group name="salary">
                         <field name='employee_grade' required="1"/>
-                        <field name="manager_insentive" invisible="employee_grade in ('m2','p1')"/>
-                        <label for="usd_salary" invisible="employee_grade not in ('m2','p1')"/>
-                        <div class="o_row mw-50" name="usd_salary" invisible="employee_grade not in ('m2','p1')">
-                            <field name="usd_salary" class="oe_inline o_hr_narrow_field" invisible="employee_grade not in ('m2','p1')" nolabel="1"/>
-                            <div class="mb-3" name="wage_period_label" invisible="employee_grade not in ('m2','p1')"> <field name='currency_id_usd' invisible="employee_grade not in ('m2','p1')"/></div>
+                        <field name="manager_insentive" invisible="employee_grade in ('m3','m2','m1','p3','p2','p1')"/>
+                        <label for="usd_salary" invisible="employee_grade not in ('m3','m2','m1','p3','p2','p1')"/>
+                        <div class="o_row mw-50" name="usd_salary" invisible="employee_grade not in ('m3','m2','m1','p3','p2','p1')">
+                            <field name="usd_salary" class="oe_inline o_hr_narrow_field" invisible="employee_grade not in ('m3','m2','m1','p3','p2','p1')" nolabel="1"/>
+                            <div class="mb-3" name="wage_period_label" invisible="employee_grade not in ('m3','m2','m1','p3','p2','p1')"> <field name='currency_id_usd' invisible="employee_grade not in ('m3','m2','m1','p3','p2','p1')"/></div>
                         </div>
                     </group>
                 </xpath>
