--- a/medigates_sale/views/sale_order.xml
+++ b/medigates_sale/views/sale_order.xml
@@ -43,12 +43,12 @@
             <xpath expr="//button[@id='create_invoice']" position="replace">
                 <button id="create_invoice" name="%(sale.action_view_sale_advance_payment_inv)d" string="Create Invoice"
                     type="action" class="btn-primary" data-hotkey="q"
-                    invisible="invoice_status != 'to invoice'" groups="medigates_sale.group_sale_accountant"/>
+                    invisible="invoice_status != 'to invoice'"/>
             </xpath>
              <xpath expr="//button[@id='create_invoice_percentage']" position="replace">
                     <button id="create_invoice_percentage" name="%(sale.action_view_sale_advance_payment_inv)d" string="Create Invoice"
                     type="action" context="{'default_advance_payment_method': 'percentage'}" data-hotkey="q"
-                    invisible="invoice_status != 'no' or state != 'sale'" groups="medigates_sale.group_sale_accountant"/>
+                    invisible="invoice_status != 'no' or state != 'sale'"/>
             </xpath>
             <xpath expr="//field[@name='state']" position="replace">
                 <field name="state" widget="statusbar" statusbar_visible="draft,sales_supervisor,sent,accountant,sale"/>
