--- a/medigates_sale/views/sale_order.xml
+++ b/medigates_sale/views/sale_order.xml
@@ -37,7 +37,7 @@
             <xpath expr="//button[@name='action_confirm']" position="after">
                 <button name="action_sales_manager" data-hotkey="q"
                     string="Sales Manager  Approval" type="object" context="{'validate_analytic': True}"
-                    invisible="state not in ('sales_supervisor', 'draft')" groups="medigates_sale.group_sale_accountant"/>
+                    invisible="state not in ('draft', 'sales_supervisor')" groups="medigates_sale.group_sale_accountant"/>
             </xpath>
             
             <xpath expr="//button[@id='create_invoice']" position="replace">
