--- a/medigates_sale/views/sale_order.xml
+++ b/medigates_sale/views/sale_order.xml
@@ -27,7 +27,7 @@
             <xpath expr="//button[@name='action_confirm'][2]" position="replace">
                    <button name="action_confirm" data-hotkey="q"
                     string="Confirm" type="object" context="{'validate_analytic': True}"
-                    invisible="state not in ('sales_supervisor', 'sales_manager')"/>
+                    invisible="state != 'accountant'" groups="medigates_sale.group_sale_accountant"/>
             </xpath>
       <!--       <xpath expr="//button[@name='action_confirm']" position="replace">
                    <button name="action_confirm" data-hotkey="q"
@@ -35,20 +35,20 @@
                     invisible="state != 'sales_supervisor'"/>
             </xpath> -->
             <xpath expr="//button[@name='action_confirm']" position="after">
-                <button name="action_sales_manager" data-hotkey="q"
-                    string="Sales Manager  Approval" type="object" context="{'validate_analytic': True}"
-                    invisible="state not in ('draft', 'sales_supervisor')" groups="medigates_sale.group_sale_accountant"/>
+                <button name="action_accountant" data-hotkey="q"
+                    string="Accountant Approval" type="object" context="{'validate_analytic': True}"
+                    invisible="state != 'sales_supervisor'" groups="medigates_sale.group_sale_accountant"/>
             </xpath>
             
             <xpath expr="//button[@id='create_invoice']" position="replace">
                 <button id="create_invoice" name="%(sale.action_view_sale_advance_payment_inv)d" string="Create Invoice"
                     type="action" class="btn-primary" data-hotkey="q"
-                    invisible="invoice_status != 'to invoice'"/>
+                    invisible="invoice_status != 'to invoice'" groups="medigates_sale.group_sale_accountant"/>
             </xpath>
              <xpath expr="//button[@id='create_invoice_percentage']" position="replace">
                     <button id="create_invoice_percentage" name="%(sale.action_view_sale_advance_payment_inv)d" string="Create Invoice"
                     type="action" context="{'default_advance_payment_method': 'percentage'}" data-hotkey="q"
-                    invisible="invoice_status != 'no' or state != 'sale'"/>
+                    invisible="invoice_status != 'no' or state != 'sale'" groups="medigates_sale.group_sale_accountant"/>
             </xpath>
             <xpath expr="//field[@name='state']" position="replace">
                 <field name="state" widget="statusbar" statusbar_visible="draft,sales_supervisor,sent,accountant,sale"/>
